force-app/main/default/objects/Sela__c/Sela__c.object-meta.xml
<CustomObject>
    <label>Sela</label>
    <nameField>
        <label>Sela Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>