force-app/main/default/objects/Sela__c/fields/DC_rate__c.field-meta.xml
<CustomField>
    <fullName>DC_rate__c</fullName>
    <label>DC rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>