force-app/main/default/objects/Sela__c/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <label>Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>GMAU</fullName>
            </value>
            <value>
                <fullName>GMC</fullName>
            </value>
            <value>
                <fullName>GME</fullName>
            </value>
            <value>
                <fullName>GMSR</fullName>
            </value>
            <value>
                <fullName>GS</fullName>
            </value>
            <value>
                <fullName>HMID DMS</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>KIA HQ</fullName>
            </value>
            <value>
                <fullName>KIA India</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>