force-app/main/default/objects/Sela__c/fields/OrgName__c.field-meta.xml
<CustomField>
    <fullName>OrgName__c</fullName>
    <label>OrgName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>