force-app/main/default/objects/Sela__c/fields/Rollout_Total_List__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Total_List__c</fullName>
    <label>Rollout Total List</label>
    <summarizedField>SelaProductLineItem__c.TotalListPrice__c</summarizedField>
    <summaryForeignKey>SelaProductLineItem__c.SELA__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>