force-app/main/default/objects/Sela__c/fields/Rollup_Total__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Total__c</fullName>
    <label>Rollup Total</label>
    <summarizedField>SelaProductLineItem__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>SelaProductLineItem__c.SELA__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>