force-app/main/default/objects/Sela__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Org__c</columns>
    <columns>Total__c</columns>
    <columns>List_Price_Total__c</columns>
    <columns>DC_rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>